# open-earth-compiler

./: CMakeLists.txt
gen-stencil/: CMakeLists.txt  gen-stencil.cpp  gen-stencil_old.cpp.bak  gen-stencil_working_copy_kernel.cpp
include/Conversion/: CMakeLists.txt
include/Conversion/RaiseAffineToStencil/: CMakeLists.txt  Passes.h  Passes.td
include/Dialect/Stencil/: Passes.h  Passes.td  StencilBase.td  StencilOps.td
lib/Conversion/: CMakeLists.txt
lib/Conversion/LoopsToGPU/: CMakeLists.txt  ConvertKernelFuncToCubin.cpp
lib/Conversion/RaiseAffineToStencil/: CMakeLists.txt  PassDetail.h  RaiseAffineToStencil.cpp
lib/Conversion/StencilToStandard/: ConvertStencilToStandard.cpp
lib/Dialect/Stencil/: CMakeLists.txt  DomainSplitPass.cpp  EraseNonStencilProgramsPass.cpp  EraseStencilBuffers.cpp  StencilDialect.cpp  StencilInliningPass.cpp  StencilOps.cpp
oec-opt/: CMakeLists.txt  oec-opt.cpp
test/Examples/: tridiagonal.mlir
